# whiskers-launcher-snippets-extension

./: Cargo.toml  README.md  extension  manifest.json
src/: main.rs
src/actions/: mod.rs
src/icons/: mod.rs
src/results/: mod.rs
src/snippets/: mod.rs
