[package]
name = "whiskers-launcher-snippets-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
whiskers-launcher-rs = { git = "https://github.com/lighttigerXIV/whiskers-launcher-rs.git" }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114" 
fuzzy-matcher = "0.3.7"